[project]
name = "PySprints"
version = "25.1.0"
authors = [
  { name="Christian Theune", email="ct@flyingcircus.io" },
  { name="Veit Schiele", email="veit@cusy.io" },
]
description = ""
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.optional-dependencies]
docs = [
    "sphinx<8.2",
    "furo",
    "sphinxext.opengraph", # matplotlib is required for social cards
    "matplotlib",
    "sphinx-copybutton",
    "sphinx_inline_tabs",
    "sphinx-lint",
]

dev = [
    "PySprints[docs]",
    "pre-commit",
    "codespell",
    "vale",
]

[project.urls]
"Homepage" = "https://github.com/veit/PySprints/"
"Bug Tracker" = "https://github.com/veit/PySprints/issues"

[tool.setuptools]
packages = []

[tool.codespell]
skip = "*.ipynb, ./docs/_build/*, ./styles/*"
ignore-words-list = ""
